--- a/5.go&pipe&curry.html
+++ b/5.go&pipe&curry.html
@@ -54,21 +54,95 @@
   );
   f2(0, 2);
 
-  // console.clear();
+  console.clear();
 </script>
 
-<script></script>
+<script>
+  // log(
+  //   reduce(
+  //     add,
+  //     map(
+  //       (p) => p.price,
+  //       filter((p) => p.price < 20000, products)
+  //     )
+  //   )
+  // );
+  // =>
+  go(
+    products,
+    (products) => filter((p) => p.price < 20000, products),
+    (products) => map((p) => p.price, products),
+    (prices) => reduce(add, prices),
+    log
+  );
+
+  console.clear();
+</script>
 
 <!-- 
   ## curry 
 -->
 
 <script>
-  // console.clear();
+  // fx.js로 이동
+  // const curry = (f) => (a, ..._) =>
+  //   _.length ? f(a, ..._) : (..._) => f(a, ..._);
+
+  const mult = curry((a, b) => a * b);
+  log(mult(1)(2));
+
+  const mult3 = mult(3);
+  log(mult3(10), mult3(5), mult3(3));
+
+  // go(
+  //   products,
+  //   (products) => filter((p) => p.price < 20000, products),
+  //   (products) => map((p) => p.price, products),
+  //   (prices) => reduce(add, prices),
+  //   log
+  // );
+  // =>
+
+  go(
+    products,
+    (products) => filter((p) => p.price < 20000)(products),
+    (products) => map((p) => p.price)(products),
+    (prices) => reduce(add)(prices),
+    log
+  );
+  // =>
+
+  go(
+    products,
+    filter((p) => p.price < 20000),
+    map((p) => p.price),
+    reduce(add),
+    log
+  );
+
+  console.clear();
 </script>
 
 <!-- 
 # 함수 조합으로 함수 만들기 
 -->
 
-<script></script>
+<script>
+  const total_price = pipe(
+    map((p) => p.price),
+    reduce(add)
+  );
+
+  const base_total_price = (predi) => pipe(filter(predi), total_price);
+
+  go(
+    products,
+    base_total_price((p) => p.price < 20000),
+    log
+  );
+  go(
+    products,
+    base_total_price((p) => p.price >= 20000),
+    log
+  );
+</script>
