--- a/5.go&pipe&curry.html
+++ b/5.go&pipe&curry.html
@@ -19,8 +19,9 @@
 -->
 
 <script>
-  const go = (...args) => reduce((a, f) => f(a), args);
-  const pipe = (f, ...fs) => (...as) => go(f(...as), ...fs);
+  // fx.js로 이동
+  // const go = (...args) => reduce((a, f) => f(a), args);
+  // const pipe = (f, ...fs) => (...as) => go(f(...as), ...fs);
 
   go(
     0,
