--- a/7.lazyEvaluation.html
+++ b/7.lazyEvaluation.html
@@ -8,16 +8,17 @@
  -->
 
 <script>
-  const range = (l) => {
-    let i = -1;
-    let res = [];
+  // fx.js로 이동
+  // const range = (l) => {
+  //   let i = -1;
+  //   let res = [];
 
-    while (++i < l) {
-      res.push(i);
-    }
+  //   while (++i < l) {
+  //     res.push(i);
+  //   }
 
-    return res;
-  };
+  //   return res;
+  // };
 
   var list = range(4);
   log(list); // array
@@ -29,13 +30,14 @@
  -->
 
 <script>
-  const L = {};
-  L.range = function* (l) {
-    let i = -1;
-    while (++i < l) {
-      yield i;
-    }
-  };
+  // fx.js로 이동
+  // const L = {};
+  // L.range = function* (l) {
+  //   let i = -1;
+  //   while (++i < l) {
+  //     yield i;
+  //   }
+  // };
 
   var list = L.range(4);
   log(list); // iterator
@@ -58,14 +60,15 @@
   ## take
  -->
 <script>
-  const take = curry((l, iter) => {
-    let res = [];
-    for (const a of iter) {
-      res.push(a);
-      if (res.length === l) return res;
-    }
-    return res;
-  });
+  // fx.js로 이동
+  // const take = curry((l, iter) => {
+  //   let res = [];
+  //   for (const a of iter) {
+  //     res.push(a);
+  //     if (res.length === l) return res;
+  //   }
+  //   return res;
+  // });
 
   console.time('take');
   // log(take(5, range(100000)));
@@ -79,5 +82,5 @@
   // log(take(5, L.range(Infinity))); // 정상 처리
   // go(L.range(10000), take(5), reduce(add), log);
   go(L.range(10000), reduce(add), log);
-  console.timeEnd('take L');
+  console.timeEnd('take L ');
 </script>
