refactor: 성능 테스트를 위해 const...for 를 풀어서 작성

--- a/8.lazyEvaluation.html
+++ b/8.lazyEvaluation.html
@@ -10,9 +10,10 @@
 -->
 
 <script>
-  L.map = curry(function* (f, iter) {
-    for (const a of iter) yield f(a);
-  });
+  // fx.js로 이동
+  // L.map = curry(function* (f, iter) {
+  //   for (const a of iter) yield f(a);
+  // });
 
   var it = L.map((a) => a + 10, [1, 2, 3]);
   // log(it.next(), it.next(), it.next(), it.next());
@@ -24,9 +25,10 @@
 -->
 
 <script>
-  L.filter = curry(function* (f, iter) {
-    for (const a of iter) if (f(a)) yield a;
-  });
+  // fx.js로 이동
+  // L.filter = curry(function* (f, iter) {
+  //   for (const a of iter) if (f(a)) yield a;
+  // });
 
   var it = L.filter((a) => a % 2, [1, 2, 3, 4]);
   log(...it);
