refactor: map, filter를 L.map, L.filter를 이용하여 지연 연산을 적용하고 표현력 강화

--- a/8.lazyEvaluation.html
+++ b/8.lazyEvaluation.html
@@ -33,7 +33,7 @@
   var it = L.filter((a) => a % 2, [1, 2, 3, 4]);
   log(...it);
 
-  console.clear();
+  // console.clear();
 </script>
 
 <!-- 
@@ -66,7 +66,7 @@
     log
   );
   console.timeEnd('');
-  console.clear();
+  // console.clear();
 </script>
 
 <!-- 
@@ -122,7 +122,7 @@
   // // log(a().join(','));
   // log(join(',', a()));
 
-  console.clear();
+  // console.clear();
 </script>
 
 <!-- 
