--- a/9.flat.html
+++ b/9.flat.html
@@ -21,16 +21,147 @@
 
   log(take(6, L.flatten([[1, 2], 3, 4, [5, 6], [7, 8, 9]])));
 
-  const flatten = pipe(L.flatten, takeAll);
+  // fx.js로 이동
+  // const flatten = pipe(L.flatten, takeAll);
   var it2 = flatten([[1, 2], 3, 4, [5, 6], [7, 8, 9]]);
   log(it2);
 
   var it3 = L.deepFlat([[[1, 2]], 3, 4, [5, 6], [7, 8, 9]]);
   log(...it3);
+
+  console.clear();
 </script>
 
 <!-- 
 ## L.flatMap
 -->
 
-<script></script>
+<script>
+  const ma = [
+    [1, 2],
+    [3, 4],
+    [5, 6],
+    [7, 8, 9],
+  ];
+  // log(
+  //   ma.flatMap((a) => a)
+  // );
+  // log(
+  //   ma.flatMap((a) => a.map((a) => a * a))
+  // );
+  // log(
+  //   flatten(
+  //     ma.map((a) => a.map((a) => a * a))
+  //   )
+  // );
+
+  // fx.js로 이동
+  // L.flatMap = curry(pipe(L.map, L.flatten));
+  // const flatMap = pipe(L.flatMap, takeAll);
+
+  const it4 = L.flatMap(
+    map((a) => a * a),
+    ma
+  );
+  console.log(...it4);
+
+  const it5 = flatMap(
+    map((a) => a * a),
+    ma
+  );
+  console.log(it5);
+
+  go(ma, L.flatMap(map((a) => a * a)), log);
+  log(
+    flatMap(
+      map((a) => a * a),
+      ma
+    )
+  );
+  log(flatMap(L.range, [1, 2, 3]));
+
+  console.clear();
+</script>
+
+<!-- 
+## 2차원 배열 다루기
+-->
+
+<script>
+  const arr = [
+    [1, 2],
+    [3, 4, 5],
+    [6, 7, 8],
+    [9, 10],
+  ];
+
+  const add = (a, b) => a + b;
+
+  go(
+    arr,
+    L.flatten,
+    L.filter((a) => a % 2),
+    L.map((a) => a * a),
+    take(3),
+    reduce(add),
+    log
+  );
+</script>
+
+<!-- 
+## 지연성 / 이터러블 중심 프로그래밍 실무적인 코드
+-->
+
+<script>
+  var users = [
+    {
+      name: 'a',
+      age: 21,
+      family: [
+        { name: 'a1', age: 53 },
+        { name: 'a2', age: 47 },
+        { name: 'a3', age: 16 },
+        { name: 'a4', age: 15 },
+      ],
+    },
+    {
+      name: 'b',
+      age: 24,
+      family: [
+        { name: 'b1', age: 58 },
+        { name: 'b2', age: 51 },
+        { name: 'b3', age: 19 },
+        { name: 'b4', age: 22 },
+      ],
+    },
+    {
+      name: 'c',
+      age: 31,
+      family: [
+        { name: 'c1', age: 64 },
+        { name: 'c2', age: 62 },
+      ],
+    },
+    {
+      name: 'd',
+      age: 20,
+      family: [
+        { name: 'd1', age: 42 },
+        { name: 'd2', age: 42 },
+        { name: 'd3', age: 11 },
+        { name: 'd4', age: 7 },
+      ],
+    },
+  ];
+
+  go(
+    users,
+    L.map((u) => u.family),
+    L.flatten,
+    L.filter((u) => u.age < 20),
+    L.map((u) => u.name),
+    take(4),
+    // reduce(add),
+    log
+  );
+</script>
