--- a/11.concurrency.html
+++ b/11.concurrency.html
@@ -46,39 +46,46 @@
 -->
 
 <script>
-  go(
-    [1, 2, 3, 4, 5, 6, 7, 8],
-    L.map((a) => Promise.resolve(a * a)),
-    L.filter((a) => a % 2),
-    take(4),
-    log
-  );
-
-  go(
-    [1, 2, 3, 4, 5, 6, 7, 8],
-    L.map((a) => a * a),
-    L.filter((a) => Promise.resolve(a % 2)),
-    take(4),
-    log
-  );
-
-  go(
-    [1, 2, 3, 4, 5, 6, 7, 8],
-    L.map((a) => Promise.resolve(a * a)),
-    L.filter((a) => Promise.resolve(a % 2)),
-    take(4),
-    log
-  );
-  go(
-    [1, 2, 3, 4, 5, 6, 7, 8],
-    L.map((a) => Promise.resolve(a * a)),
-    filter((a) => Promise.resolve(a % 2)),
-    log
-  );
+  // go(
+  //   [1, 2, 3, 4, 5, 6, 7, 8],
+  //   L.map((a) => Promise.resolve(a * a)),
+  //   L.filter((a) => a % 2),
+  //   take(4),
+  //   log
+  // );
+  // go(
+  //   [1, 2, 3, 4, 5, 6, 7, 8],
+  //   L.map((a) => a * a),
+  //   L.filter((a) => Promise.resolve(a % 2)),
+  //   take(4),
+  //   log
+  // );
+  // go(
+  //   [1, 2, 3, 4, 5, 6, 7, 8],
+  //   L.map((a) => Promise.resolve(a * a)),
+  //   L.filter((a) => Promise.resolve(a % 2)),
+  //   take(4),
+  //   log
+  // );
+  // go(
+  //   [1, 2, 3, 4, 5, 6, 7, 8],
+  //   L.map((a) => Promise.resolve(a * a)),
+  //   filter((a) => Promise.resolve(a % 2)),
+  //   log
+  // );
 </script>
 
 <!-- 
 ## reduce에서 nop지원
 -->
 
-<script></script>
+<script>
+  const add = (a, b) => a + b;
+  go(
+    [1, 2, 3, 4, 5, 6, 7, 8],
+    L.map((a) => Promise.resolve(a * a)),
+    L.filter((a) => Promise.resolve(a % 2)),
+    reduce(add),
+    log
+  );
+</script>
