--- a/11.concurrency.html
+++ b/11.concurrency.html
@@ -81,11 +81,45 @@
 
 <script>
   const add = (a, b) => a + b;
+  // go(
+  //   [1, 2, 3, 4, 5, 6, 7, 8],
+  //   L.map((a) => Promise.resolve(a * a)),
+  //   L.filter((a) => Promise.resolve(a % 2)),
+  //   reduce(add),
+  //   log
+  // );
+</script>
+
+<!-- 
+## 지연된 함수열을 병렬적으로 평가하기 - C.reduce, C.take
+-->
+
+<script>
+  const C = {};
+
+  C.reduce = curry((f, acc, iter) =>
+    iter ? reduce(f, acc, [...iter]) : reduce(f, [...acc])
+  );
+
+  const delay500 = (a) =>
+    new Promise((resolve) => {
+      console.log(`delay - ${a}`);
+      setTimeout(() => resolve(a), 500);
+    });
+
+  console.time('');
   go(
-    [1, 2, 3, 4, 5, 6, 7, 8],
-    L.map((a) => Promise.resolve(a * a)),
-    L.filter((a) => Promise.resolve(a % 2)),
+    [1, 2, 3, 4, 5, 6, 7, 8, 9],
+    L.map((a) => delay500(a * a)),
+    L.filter((a) => a % 2),
     reduce(add),
-    log
+    log,
+    (_) => console.timeEnd('')
   );
 </script>
+
+<!-- 
+## 즉시 병렬적으로 평가하기 - C.map, C.filter
+-->
+
+<script></script>
