--- a/11.concurrency.html
+++ b/11.concurrency.html
@@ -110,6 +110,12 @@
 
   C.take = curry((l, iter) => take(l, catchNoop([...iter])));
 
+  C.takeAll = C.take(Infinity);
+
+  C.map = curry(pipe(L.map, C.takeAll));
+
+  C.filter = curry(pipe(L.filter, C.takeAll));
+
   const delay500 = (a) =>
     new Promise((resolve) => {
       console.log(`delay`);
@@ -136,19 +142,40 @@
   //   (_) => console.timeEnd('C')
   // );
 
-  go(
-    [1, 2, 3, 4, 5, 6, 7, 8, 9],
-    L.map((a) => delay500(a * a)),
-    L.filter((a) => delay500(a % 2)),
-    L.map((a) => delay500(a * a)),
-    C.take(2),
-    C.reduce(add),
-    log
-  );
+  // go(
+  //   [1, 2, 3, 4, 5, 6, 7, 8, 9],
+  //   L.map((a) => delay500(a * a)),
+  //   L.filter((a) => delay500(a % 2)),
+  //   L.map((a) => delay500(a * a)),
+  //   C.take(2),
+  //   C.reduce(add),
+  //   log
+  // );
 </script>
 
 <!-- 
 ## 즉시 병렬적으로 평가하기 - C.map, C.filter
 -->
 
-<script></script>
+<script>
+  // C.map((a) => delay500(a * a), [1, 2, 3, 4]).then(log);
+  // C.filter((a) => delay500(a % 2), [1, 2, 3, 4]).then(log);
+
+  const delay = (a, name) =>
+    new Promise((resolve) => {
+      console.log(`${name}: ${a}`);
+      setTimeout(() => resolve(a), 500);
+    });
+
+  console.time('');
+  go(
+    [1, 2, 3, 4, 5, 6, 7, 8],
+    C.map((a) => delay(a * a, 'map 1')),
+    C.filter((a) => delay(a % 2, 'filter 2')),
+    C.map((a) => delay(a + 1, 'map 3')),
+    C.take(2),
+    // C.reduce(add),
+    log,
+    (_) => console.timeEnd('')
+  );
+</script>
