--- a/11.concurrency.html
+++ b/11.concurrency.html
@@ -99,16 +99,20 @@
 
   function noop() {}
 
-  const catchNoop = (arr) => (
+  const catchNoop = ([...arr]) => (
     arr.forEach((a) => (a instanceof Promise ? a.catch(noop) : a)), arr
   );
 
-  C.reduce = curry((f, acc, iter) => {
-    const iter2 = catchNoop(iter ? [...iter] : [...acc]);
-    return iter ? reduce(f, acc, iter2) : reduce(f, iter2);
-  });
+  // C.reduce = curry((f, acc, iter) => {
+  //   const iter2 = catchNoop(iter ? [...iter] : [...acc]);
+  //   return iter ? reduce(f, acc, iter2) : reduce(f, iter2);
+  // });
 
-  C.take = curry((l, iter) => take(l, catchNoop([...iter])));
+  C.reduce = curry((f, acc, iter) =>
+    iter ? reduce(f, acc, catchNoop(iter)) : reduce(f, catchNoop(acc))
+  );
+
+  C.take = curry((l, iter) => take(l, catchNoop(iter)));
 
   C.takeAll = C.take(Infinity);
 
